# connector-proxy

./: Dockerfile  README.MD  dev.Dockerfile  dev.docker-compose.yml  pyproject.toml
connector_proxy/: app.py
pdf-connector/: pyproject.toml
pdf-connector/src/pdf_connector/commands/: generate_pdf.py
