[tool.poetry]
name = "connector-proxy"
version = "0.1.0"
description = "Connector proxy, which serve as container for connectors for the spiffworkflow engine"
authors = ["Buhari Abubakar <buharikwmbo@hotmail.com>"]
license = "LGPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.2.2"

spiffworkflow-proxy = { git = "https://github.com/sartography/spiffworkflow-proxy"}
connector-http = {git = "https://github.com/sartography/connector-http.git"}
connector-pdf = {git = "https://github.com/buhari15/connector-pdf.git"}
connector-smtp = {git = "https://github.com/sartography/connector-smtp.git"}
connector-twilio = {git = "https://github.com/buhari15/connector-twilio.git"}

gunicorn = "^20.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
