[tool.poetry]
name = "pdf-connector"
version = "0.1.0"
description = "This connector will generate a PDF documell generate a PDF document, which will be availabe during the use of Service Tasks in Spiffworkflow"
authors = ["Buhari Abubakar <buharikwmbo@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
spiffworkflow-proxy = { git = "https://github.com/sartography/spiffworkflow-proxy.git", rev = "main" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
